update docker file

--- a/SkinCareTipsAPI/dockerfile.txt
+++ b/SkinCareTipsAPI/dockerfile.txt
@@ -1,18 +1,22 @@
-﻿# Use the official .NET SDK image to build the app
+﻿# Build stage
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /app
 
-# Copy csproj and restore as distinct layers
+# Copy csproj and restore dependencies
 COPY *.csproj ./
 RUN dotnet restore
 
-# Copy everything else and build
+# Copy the rest of the code and publish
 COPY . ./
 RUN dotnet publish -c Release -o out
 
-# Build runtime image
+# Runtime stage
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build /app/out .
-EXPOSE 10000
+
+# Fly.io sets the PORT environment variable automatically
+ENV ASPNETCORE_URLS=http://+:$PORT
+EXPOSE $PORT
+
 ENTRYPOINT ["dotnet", "SkinCareTipsAPI.dll"]
